turtleart.flower3.Flower3.scala.error
Compilation error:
Flower3:8: error: Unmatched closing brace '}' ignored here
}
^